# flowscope

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  package.json
.github/workflows/: ci.yml
app/public/wasm/: flowscope_wasm.d.ts  flowscope_wasm.js
app/src/components/: EditorArea.tsx  SchemaEditor.tsx
crates/flowscope-cli/src/: cli.rs  main.rs
crates/flowscope-core/: build.rs
crates/flowscope-core/specs/dialect-semantics/: dialects.json
crates/flowscope-core/src/: analyzer.rs
crates/flowscope-core/src/analyzer/: context.rs  ddl.rs  expression.rs  global.rs  query.rs  statements.rs  visitor.rs
crates/flowscope-core/src/types/: response.rs
crates/flowscope-core/tests/: lineage_engine.rs  templating.rs
crates/flowscope-core/tests/snapshots/: golden__golden_column_lineage_union_captures_outputs.snap  golden__golden_column_lineage_union_captures_outputs.snap.new  golden__golden_ctas_captures_target_columns.snap  golden__golden_imported_precedence_over_create_table.snap  golden__golden_inline_select_tables_only.snap  golden__golden_inline_select_tables_only.snap.new  golden__golden_multi_file_keeps_sources.snap  golden__golden_multi_file_keeps_sources.snap.new  golden__golden_resolved_schema_with_imported_and_implied.snap  (+34 more)
crates/flowscope-export/src/: dali_compat.rs  lib.rs
crates/flowscope-export/tests/: dali_compat_oracle.rs
docs/: api-types.md  api_schema.json
scripts/: xlsx_to_schema.py
vscode/: package.json
vscode/src/: analysis.ts  extension.ts  types.ts
vscode/src/providers/: completion.ts
(+93 files in other folders)
